CVS Code -
- General
	- Changed some translatable debug messages to use %s 
	  instead of the function name, and removed gettext from 
	  two strings that had no actual words in them that
	  should be translated.	 Suggested originally by
	  Christian Rose.
- cut.c:
  do_cut_text()
	- Fix incorrect cursor location when cutting long lines
	  (David Benbennick).
- files.c:
  open_file()
	- Fix FD leak with file load error (David Benbennick).
- nano.c:
  do_preserve_msg():
	- Unsplit error message into a single fprintf call (Jordi).
  main()
	- Call load_file with arg 0 for insert, as we aren't really
	  doing an insert, allows new_file() to run if we open a 
	  non-file at startup.
  usage()
  	- Remove gettext markings from -p/--preserve (Jordi).
	- Revamp -H option message to fit in 80 column terminal.
  window_init()
	- Fix leaking *WINDOWs (no pun intended) (David Benbennick).
- search.c:
  do_replace_loop()
	- Fix various bugs having to do with replace string length
	  and positioning (David Benbennick).
- winio.c:
  bottombars()
	- Change strcpy of gettext() "Up" string to strncpy of max
	  width 8, to stop stupid strcpy crash.
- nanorc.sample:
	- Change comment to say magenta instead of purple.

GNU nano 1.1.99pre1 - 2003.01.17
- General:
	- New date format for NEWS and ChangeLog.
	- Completely removed PICO_MODE, as with the search/replace
	  history patch we should have the extended functionality we can
	  without being incompatible with Pico.  Removed all code for
	  different search/replace string editing and alternate shortcut
	  list.  I'm sure I won't even have to ask for feedback on this
	  one :-)
	- Add in Pico's -p flag, (-p, --preserve).  To preserve the XON
	  and XOFF keys (^Q and ^S).  Add warning if we invoke -p and
	  add checks for using --preserve (to skip warning) and --pico
	  (to force showing it).   New flag PRESERVE, function
	  do_preserve_msg(), changes to main(), signal_init().